[gd_scene load_steps=4 format=3 uid="uid://bdiba5m4ahep0"]

[ext_resource type="Script" path="res://main-menu/main.gd" id="1_3oeqx"]
[ext_resource type="VideoStream" path="res://splash_screen_start.ogv" id="2_5mpbu"]
[ext_resource type="Texture2D" uid="uid://dl83ox4gxsw0l" path="res://RedotLogo.svg" id="3_36nrl"]

[node name="Mainmenue" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3oeqx")
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 33.0
offset_top = 27.0
offset_right = -23.0
offset_bottom = 89.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "main-menu screen"

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 86.0
offset_right = 480.0
offset_bottom = 612.0
current_tab = 0

[node name="Level 1-6" type="Control" parent="TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="VFlowContainer" type="VFlowContainer" parent="TabContainer/Level 1-6"]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 31.0
offset_bottom = -15.0
theme_override_constants/v_separation = 10

[node name="Level1" type="Button" parent="TabContainer/Level 1-6/VFlowContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Level 1 - basic FPS shooter"

[node name="Level2" type="Button" parent="TabContainer/Level 1-6/VFlowContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Level 2 - grab and throw"

[node name="Level3" type="Button" parent="TabContainer/Level 1-6/VFlowContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Level 3 - fill a item and interact"

[node name="Level4" type="Button" parent="TabContainer/Level 1-6/VFlowContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Level 4 - player actions, doors"

[node name="Level5" type="Button" parent="TabContainer/Level 1-6/VFlowContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Level 5 - better doors and  switches"

[node name="Level6" type="Button" parent="TabContainer/Level 1-6/VFlowContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Level 6 - logic and GUI"

[node name="Level6A-UI" type="Button" parent="TabContainer/Level 1-6/VFlowContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Level 6 (A) - UI ONLY TEST"

[node name="EndGame" type="Button" parent="TabContainer/Level 1-6/VFlowContainer"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "close game"

[node name="Level 7-x" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="VFlowContainer" type="VFlowContainer" parent="TabContainer/Level 7-x"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Level7" type="Button" parent="TabContainer/Level 7-x/VFlowContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Level 7 - Level Change?"

[node name="Experiments" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="VFlowContainer" type="VFlowContainer" parent="TabContainer/Experiments"]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 31.0
offset_bottom = -202.0
theme_override_constants/v_separation = 10

[node name="Exp1-Radar2D" type="Button" parent="TabContainer/Experiments/VFlowContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Radar\\Echo 2D"

[node name="EndGame" type="Button" parent="TabContainer/Experiments/VFlowContainer"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "close game"

[node name="Panel" type="Panel" parent="."]
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(600, 600)
layout_mode = 2
offset_left = 499.0
offset_top = 24.0
offset_right = 1099.0
offset_bottom = 624.0

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
layout_mode = 0
offset_left = 543.0
offset_top = 70.0
offset_right = 1055.0
offset_bottom = 582.0

[node name="SplashPlayer" type="VideoStreamPlayer" parent="AspectRatioContainer"]
unique_name_in_owner = true
layout_mode = 2
stream = ExtResource("2_5mpbu")
autoplay = true

[node name="RedotLogo" type="Sprite2D" parent="."]
position = Vector2(625.125, 504.875)
scale = Vector2(0.135875, 0.135875)
texture = ExtResource("3_36nrl")

[connection signal="button_up" from="TabContainer/Level 1-6/VFlowContainer/Level1" to="." method="_on_level_1_button_up"]
[connection signal="button_up" from="TabContainer/Level 1-6/VFlowContainer/Level2" to="." method="_on_level_2_button_up"]
[connection signal="button_up" from="TabContainer/Level 1-6/VFlowContainer/Level3" to="." method="_on_level_3_button_up"]
[connection signal="button_up" from="TabContainer/Level 1-6/VFlowContainer/Level4" to="." method="_on_level_4_button_up"]
[connection signal="button_up" from="TabContainer/Level 1-6/VFlowContainer/Level5" to="." method="_on_level_5_button_up"]
[connection signal="button_up" from="TabContainer/Level 1-6/VFlowContainer/Level6" to="." method="_on_level_6_button_up"]
[connection signal="button_up" from="TabContainer/Level 1-6/VFlowContainer/Level6A-UI" to="." method="_on_level_6aui_button_up"]
[connection signal="button_up" from="TabContainer/Level 1-6/VFlowContainer/EndGame" to="." method="_on_end_game_button_up"]
[connection signal="button_up" from="TabContainer/Level 7-x/VFlowContainer/Level7" to="." method="_on_level_7_button_up"]
[connection signal="button_up" from="TabContainer/Experiments/VFlowContainer/Exp1-Radar2D" to="." method="_on_exp_1_radar_2d_button_up"]
[connection signal="button_up" from="TabContainer/Experiments/VFlowContainer/EndGame" to="." method="_on_end_game_button_up"]
[connection signal="finished" from="AspectRatioContainer/SplashPlayer" to="." method="_on_video_stream_player_finished"]
